--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./src/assets/images/tarjeta-de-credito.png" />
+    <link rel="icon" type="svg" href="./src/images/tarjeta-de-credito.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BINS YH</title>
   </head>
